--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 	<div class="columns flex flex-wrap container">
 		<div class="column w-full" id="column-xzprs">
 			<div class="primo-content">
-				<p>Ahoy!</p>
+				<p>Ahoy! We’re getting married and stuff.</p>
 			</div>
 		</div>
 	</div>
