--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <html lang="en">
     <head>
       <meta charset="utf-8">
-      <title>Primo Page</title>
+      <title>Home</title>
       <meta name="description" content="">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <link rel="stylesheet" type="text/css" href="./styles.css" />
@@ -15,11 +15,37 @@
     </head>
 
     <body data-instant-intensity="all" class="primo-page">   
-      <section id="section-flaev">
+      <section id="section-t383f">
+	<div class="columns flex flex-wrap ">
+		<div class="column w-full" id="column-cog9l">
+			<div class="primo-component">
+				<div id="component-crj3r" class="w-full"><header class="w-full bg-gray-100 font-bold py-8">
+    <div class="container flex justify-between items-center">
+        <a href="#" class="text-3xl">Syd & Tirth 4eva</a>
+        <nav>
+        	<ul class="flex">
+                	<li class="mr-2">
+                    	<a href='/rsvp.html'>RSVP</a>
+                    </li>
+            </ul>
+        </nav>
+    </div>
+</header></div>
+				<script></script>
+			</div>
+		</div>
+	</div>
+</section>
+<section id="section-8r81w">
 	<div class="columns flex flex-wrap container">
-		<div class="column w-full" id="column-xzprs">
+		<div class="column w-full md:w-1/2 md:pr-3" id="column-8qvtk">
 			<div class="primo-content">
-				<p>Ahoy! We’re getting married and stuff.</p>
+				<p><br></p><h1>We’re getting married</h1><h2>here’s some info.</h2>
+			</div>
+		</div>
+		<div class="column w-full md:w-1/2 md:pl-3" id="column-zolti">
+			<div class="primo-content">
+				
 			</div>
 		</div>
 	</div>
