--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 			<div class="primo-component">
 				<div id="component-crj3r" class="w-full"><header class="w-full bg-gray-100 font-bold py-8">
     <div class="container flex justify-between items-center">
-        <a href="#" class="text-3xl">Syd & Tirth 4eva</a>
+        <a href="/" class="text-3xl">Syd & Tirth 4eva</a>
         <nav>
         	<ul class="flex">
                 	<li class="mr-2">
@@ -40,12 +40,12 @@
 	<div class="columns flex flex-wrap container">
 		<div class="column w-full md:w-1/2 md:pr-3" id="column-8qvtk">
 			<div class="primo-content">
-				<p><br></p><h1>We’re getting married</h1><h2>here’s some info.</h2>
+				<p><br></p><h1>We’re getting married!</h1><h2>here’s some info.</h2>
 			</div>
 		</div>
 		<div class="column w-full md:w-1/2 md:pl-3" id="column-zolti">
 			<div class="primo-content">
-				
+				<p><br></p><p>Fun picture here maybe?</p>
 			</div>
 		</div>
 	</div>
