--- a/rsvp.html
+++ b/rsvp.html
@@ -21,7 +21,7 @@
 			<div class="primo-component">
 				<div id="component-uixkh" class="w-full"><header class="w-full bg-gray-100 font-bold py-8">
     <div class="container flex justify-between items-center">
-        <a href="#" class="text-3xl">Syd & Tirth 4eva</a>
+        <a href="/" class="text-3xl">Syd & Tirth 4eva</a>
         <nav>
         	<ul class="flex">
                 	<li class="mr-2">
