--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
     <html lang="en">
     <head>
       <meta charset="utf-8">
-      <title>Home</title>
+      <title>Syd & Tirth Get Hitched!</title>
       <meta name="description" content="">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <link rel="stylesheet" type="text/css" href="./styles.css" />
       <link rel="stylesheet" type="text/css" href="./index.css" />
       <script src="./index.js"></script>
       
-      
+      <script type="text/javascript" src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
     </head>
 
     <body data-instant-intensity="all" class="primo-page">   
@@ -29,6 +29,7 @@
                     </li>
             </ul>
         </nav>
+        <div data-netlify-identity-menu></div>
     </div>
 </header></div>
 				<script></script>
@@ -45,7 +46,7 @@
 		</div>
 		<div class="column w-full md:w-1/2 md:pl-3" id="column-zolti">
 			<div class="primo-content">
-				<p><br></p><p>Fun picture here maybe?</p>
+				<p><br><br></p><p>Fun picture here maybe?</p>
 			</div>
 		</div>
 	</div>
