--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                     </li>
             </ul>
         </nav>
-        <div data-netlify-identity-button>Login</div>
+        <div data-netlify-identity-button></div>
     </div>
 </header></div>
 				<script></script>
