Add alpine for real

--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
       <link rel="stylesheet" type="text/css" href="./styles.css" />
       <link rel="stylesheet" type="text/css" href="./index.css" />
       <script src="./index.js"></script>
-      
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/systemjs/6.3.1/system.min.js" integrity="sha256-15j2fw0zp8UuYXmubFHW7ScK/xr5NhxkxmJcp7T3Lrc=" crossorigin="anonymous"></script>
+          <script src="https://cdnjs.cloudflare.com/ajax/libs/systemjs/6.3.2/extras/use-default.min.js" integrity="sha256-uVDULWwA/sIHxnO31dK8ThAuK46MrPmrVn+JXlMXc5A=" crossorigin="anonymous"></script>
+          <script src="https://cdnjs.cloudflare.com/ajax/libs/systemjs/6.3.2/extras/amd.min.js" integrity="sha256-7vS4pPsg7zx1oTAJ1zQIr2lDg/q8anzUCcz6nxuaKhU=" crossorigin="anonymous"></script>
+          <script type="systemjs-importmap">{"imports":{"alpinejs":"https://cdn.jsdelivr.net/npm/alpinejs@2.6.0/dist/alpine.min.js"}}</script>
       <script type="text/javascript" src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
     </head>
 
