--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
         <div x-data="userStuff()">
             <span x-text="name"></span>
         </div>
+        <span x-data="{message:'yo'}" x-text="message"></span>
     </div>
 </header></div>
 				<script>const user = netlifyIdentity.currentUser();
