--- a/index.html
+++ b/index.html
@@ -43,8 +43,7 @@ netlifyIdentity.on('login', u => user = u);
 
 function userStuff() {
 	return {
-    	show: this.name != undefined,
-        name: user?.user_metadata?.full_name
+        name: netlifyIdentity.currentUser()?.user_metadata?.full_name
     }
 }</script>
 			</div>
