--- a/index.html
+++ b/index.html
@@ -31,19 +31,19 @@
             </ul>
         </nav>
         <div data-netlify-identity-button></div>
-        <div x-data="userStuff()">
+        <div x-data="userStuff()" @user-login.window="name = $event.detail">
             <div x-show="name">Hi, <span x-text="name"></span>!</div>
         </div>
     </div>
 </header></div>
 				<script>var user = netlifyIdentity.currentUser();
 
-netlifyIdentity.on('init', u => user = u);
-netlifyIdentity.on('login', u => user = u);
+netlifyIdentity.on('init', u => { if (u) window.dispatchEvent(new CustomEvent('user-login', {detail: u.user_metadata.full_name})); });
+netlifyIdentity.on('login', u => { if (u) window.dispatchEvent(new CustomEvent('user-login', {detail: u.user_metadata.full_name})); });
 
 function userStuff() {
 	return {
-        name: netlifyIdentity.currentUser()?.user_metadata?.full_name
+        name: ''
     }
 }</script>
 			</div>
