--- a/index.html
+++ b/index.html
@@ -23,21 +23,19 @@
 				<div id="component-crj3r" class="w-full"><header class="w-full bg-gray-100 font-bold py-8">
     <div class="container flex justify-between items-center">
         <a href="/" class="text-3xl">Syd & Tirth 4eva</a>
-        <div x-data="{ name: '' }" @user-login.window="name = $event.detail">
-            <div x-show="name">
-            	Hi, <span x-text="name"></span>!
-
-                <nav>
-                    <ul class="flex">
-                            <li class="mr-2">
-                                <a href='/rsvp.html.html'>RSVP</a>
-                            </li>
-                            <li class="mr-2">
-                                <a href='/logistics.html.html'>Logistics</a>
-                            </li>
-                    </ul>
-                </nav>
-            </div>
+        <nav>
+        	<ul class="flex">
+            	
+                	<li class="mr-2">
+                    	<a href='/rsvp.html'>RSVP</a>
+                    </li>
+                
+            </ul>
+        </nav>
+        <div data-netlify-identity-button></div>
+        <div x-data="userStuff()" @user-login.window="name = $event.detail">
+            <div x-show="name">Hey <span x-text="name"></span>!</div>
+        </div>
     </div>
 </header></div>
 				<script>var user = netlifyIdentity.currentUser();
@@ -63,7 +61,7 @@ function userStuff() {
 		</div>
 		<div class="column w-full md:w-1/2 md:pl-3" id="column-zolti">
 			<div class="primo-content">
-				<p><br><br></p><p>Fun picture here maybe?</p>
+				<p><br><br><br></p><p>Fun picture here maybe? A</p>
 			</div>
 		</div>
 	</div>
