--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 <meta name="description" content="">
 <script src="https://cdn.jsdelivr.net/gh/alpinejs/alpine@v2.6.0/dist/alpine.min.js" defer></script>
 <script type="text/javascript" src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
+<script src="./common.js"></script>
     </head>
 
     <body data-instant-intensity="all" class="primo-page">   
@@ -49,7 +50,7 @@
 	<div class="columns flex flex-wrap container">
 		<div class="column w-full md:w-1/2 md:pr-3" id="column-8qvtk">
 			<div class="primo-content">
-				<p><br><br></p><h1>We’re getting married!</h1><h2>here’s some info.</h2>
+				<p><br><br><br></p><h1>We’re getting married!</h1><h2>here’s some info.</h2>
 			</div>
 		</div>
 		<div class="column w-full md:w-1/2 md:pl-3" id="column-zolti">
